# tahweel-ui

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: download-pdfium.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/poppler/: .gitkeep
src-tauri/src/: auth.rs  google_drive.rs  lib.rs  main.rs  pdf.rs
src/assets/: main.css
src/components/: AuthStatus.vue  ConvertButtons.vue  DropZone.vue  HeaderSection.vue  LanguageDropdown.vue  ProgressSection.vue  SettingsPanel.vue  ToastContainer.vue
src/composables/: useAuth.ts  useFileProcessor.ts  useGoogleDriveOcr.ts  usePdfProcessor.ts  useWriters.ts
src/composables/__tests__/: useAuth.test.ts  useFileProcessor.test.ts  useGoogleDriveOcr.test.ts  usePdfProcessor.test.ts  useWriters.test.ts
src/i18n/: index.ts
src/i18n/__tests__/: index.test.ts
src/stores/: auth.ts  processing.ts  settings.ts  toast.ts
src/stores/__tests__/: auth.test.ts  processing.test.ts  settings.test.ts
