[package]
name = "tahweel-tauri"
version = "0.1.0"
description = "PDF/Image OCR application using Google Drive API"
authors = ["Tahweel"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "tahweel_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
dirs = "5"
url = "2"
base64 = "0.22"
urlencoding = "2"
open = "5"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
